@@ -1223,6 +1223,17 @@
         <artifactId>lombok</artifactId>
         <version>1.18.26</version>
       </dependency>
+
+      <dependency>
+        <groupId>net.openhft</groupId>
+        <artifactId>posix</artifactId>
+        <version>2.23.2</version>
+      </dependency>
+      <dependency>
+        <groupId>net.openhft</groupId>
+        <artifactId>chronicle-core</artifactId>
+        <version>2.24ea16</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <build>
@@ -1362,6 +1373,7 @@
               --add-opens=java.base/java.lang=ALL-UNNAMED
               --add-opens=java.base/java.util=ALL-UNNAMED
               --add-exports=java.base/jdk.internal.util.random=ALL-UNNAMED
+              --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
             </argLine>
           </configuration>
         </plugin>
